ADD : separation of concerns
